<resources>
    <string name="app_name">Room Reservation</string>
    <string name="title_activity_specific_room">Specific Room Activity</string>
    <string name="login_menu_item">Sign in</string>
    <string name="search_menu_item">Search</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_out">Sign out</string>
    <string name="title_activity_user">User information</string>
    <string name="create_reservation_purpose">Purpose</string>
    <string name="create_reservation_button">Create</string>
    <string name="snackbar_delete_text">Reservation was deleted!</string>
    <string name="snackbar_undo_text">UNDO</string>
</resources>
